--- a/oscars-showdown-2023/src/index.scss
+++ b/oscars-showdown-2023/src/index.scss
@@ -12,3 +12,28 @@ body {
         color: blue;
     }
 }
+
+.results-table {
+    border: 1px dashed green;
+    padding: 10px;
+    
+    td {
+        &:first-child {
+            text-align: right;
+        }
+        
+        border: 1px solid gray;
+        padding: 10px;
+        text-align: center;
+    }
+
+    th {
+        padding: 0 10px 5px 10px;
+    }
+
+    tfoot tr {
+        background: red;
+        color: white;
+        font-weight: bold;
+    }
+}
