--- a/oscars-showdown-2023/src/index.scss
+++ b/oscars-showdown-2023/src/index.scss
@@ -1,20 +1,70 @@
 @import "reset";
 
+@font-face {
+    font-family: 'futuralight';
+    src: url('./fonts/futura_light_bt-webfont.woff2') format('woff2'),
+         url('./fonts/futura_light_bt-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  
+  }
+  
+  @font-face {
+    font-family: 'futuramedium';
+    src: url('./fonts/futura_medium_bt-webfont.woff2') format('woff2'),
+         url('./fonts/futura_medium_bt-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  
+  }
+
 body {
+    background: #000;
+    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     margin: 0;
+
+    &::after {
+        background: url('https://coolmoviemerch.com/oscars-showdown/2023/oscars-slap.jpeg') no-repeat;
+        background-size: cover;
+        content: '';
+        height: 100%;
+        left: 0;
+        opacity: 0.25;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+    }
 }
 
 #root {
-    border: 1px dashed salmon;
-    padding: 20px;
 
     h1 {
-        color: blue;
+        color: #C79F27;
+        font-family: 'futuralight';
+        font-size: 50px;
+        margin-top: 50px;
+        text-align: center;
+    }
+
+    h2 {
+        color: #C79F27;
+        font-family: 'futuralight';
+        font-size: 20px;
+        margin-top: 20px;
+        text-align: center;
+
+        strong {
+            font-family: 'futuramedium';
+        }
     }
 }
 
 .results-table {
-    border: 1px dashed green;
+
+    table {
+        margin: 0 auto;
+    }
     
     td {
         &:first-child {
@@ -70,5 +120,30 @@ body {
     img {
         display: block;
         height: 200px;
+    }
+}
+
+.nom-wrapper {
+    background: #fff;
+    margin: 50px auto 0;
+    padding: 30px;
+    width: 80%;
+
+    form {
+        text-align: center;
+
+        & > div {
+            margin-top: 20px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        select {
+            text-align: center;
+        }
     }
 }
